--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "config": "^3.3.9",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
