--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./tests/*.spec.js"
+    "test": "mocha ./tests/*.spec.js",
+    "start": "node server.js",
+    "build": "babel src -d dist"
   },
   "author": "",
   "license": "ISC",
