--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/*.spec.js",
-    "start": "node server.js",
-    "build": "babel src -d dist"
+    "start": "nodemon server.js",
+    "build": "babel . --out-dir dist"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,9 @@
     "supertest": "^6.3.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "chai": "^4.3.7",
     "jest": "^29.5.0",
     "mocha": "^10.2.0"
